login form html - hide menu - temp solution - refactor later

--- a/nicnbk-ui-angular2/app/authentication/view/login.component.html
+++ b/nicnbk-ui-angular2/app/authentication/view/login.component.html
@@ -21,7 +21,7 @@
             <div><button type="button" class="btn btn-def btn-block" (click)="login()">Sign In</button></div>
 
             <br/>
-            <div class="copyrightText">&copy; 2016 NIC</div>
+            <!--<div class="copyrightText">&copy; 2016 NIC</div>-->
         </div>
     </div>
 </div>
