--- a/nicnbk-ui-angular2/app/authentication/view/login.component.html
+++ b/nicnbk-ui-angular2/app/authentication/view/login.component.html
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="Absolute-Center is-Responsive">
         <!--<div class="col-md-4 col-md-offset-4">-->
-            <div *ngIf="false">
-                Invalid username and password.
+            <div *ngIf="errorMsg != null">
+                <span style="color:red">{{errorMsg}}</span>
             </div>
             <div *ngIf="false">
                 You have been logged out.
