Business trip memos

--- a/nicnbk-ui-angular2/app/static/templates/fragments/layout.html
+++ b/nicnbk-ui-angular2/app/static/templates/fragments/layout.html
@@ -100,7 +100,7 @@
                     </li>
                     <li><a href="#">Real Estate</a></li>
                     <li><a href="#">Hedge Funds</a></li>
-                    <li><a href="#">Business Trips</a></li>
+                    <li><a [routerLink]="['/bt/list']" data-toggle="tooltip" title="Business Trip Memo">Business Trips</a></li>
                 </ul>
             </div>
         </nav>
