--- a/nicnbk-ui-angular2/app/m2s2/view/pe-memo-edit.component.html
+++ b/nicnbk-ui-angular2/app/m2s2/view/pe-memo-edit.component.html
@@ -38,18 +38,14 @@
                         <span>Call</span>
                     </label>
                 </div>
-                <div class="col-md-6">
-                    <input id="firmName" class="form-control" placeholder="Enter firm..." maxlength="250"
-                        [(ngModel)]="memo.firmName"/>
-                </div>
             </div>
         </div>
         <div class="row top-buffer" >
             <div class="col-md-12">
                 <label class="control-label col-md-1">&nbsp;</label>
                 <div class="col-md-5">
-                    <input type="text" placeholder="Fund name... " class="form-control" id="fundName"
-                           [(ngModel)]="memo.fundName" name="fundName" maxlength="250"/>
+                    <input id="firmName" class="form-control" placeholder="Enter firm..." maxlength="250"
+                           [(ngModel)]="memo.firmName"/>
                 </div>
                 <div class="col-md-2">
                     <div class='input-group date col-md-2' id='meetingDate' style="width: 100%">
@@ -162,7 +158,15 @@
                 </div>
             </div>
         </div>
-        <hr style="border-top: 1px solid #B5AEAE"/>
+    <a (click)="toggle()">Fund details {{ visible ? '&#9660;' : '&#9658;' }}</a>
+    <div [hidden]="!visible">
+        <div class="row top-buffer">
+            <div class="col-md-5">
+                <input type="text" placeholder="Fund name... " class="form-control" id="fundName"
+                       [(ngModel)]="memo.fundName" name="fundName" maxlength="250"/>
+            </div>
+        </div>
+        <label class="control-label col-md-1">&nbsp;</label>
         <div class="row top-buffer">
             <div class="col-md-12">
                 <!--<label class="checkbox-inline col-md-2">&nbsp;</label>-->
@@ -276,6 +280,9 @@
                 </div>
             </div>
         </div>
+        </div>
+        <hr style="border-top: 1px solid #B5AEAE"/>
+
         <div class="row top-buffer">
             <div class="col-md-12" style="background-color:#5bc0de;">
                 <div>
