- tags search ( not finshed) - rest headers added

--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -91,6 +91,24 @@
                         </div>
                     </div>
                 </div>
+                <!--<div>-->
+                    <!--<a (click)="toggle()">Advanced search {{ advancedSearch ? '&#9660;' : '&#9658;' }}</a>-->
+                <!--</div>-->
+                <!--<br/>-->
+                <!--<div class="row" style="background-color: white"  [hidden]="!advancedSearch">-->
+                    <!--<div class="col-md-12">-->
+                        <!--<div class="col-md-6">-->
+                            <!--<tag-input [ngModel]="searchParams.tags" ngDefaultControl-->
+                                       <!--(onRemove)="onItemRemoved($event)"-->
+                                       <!--(onAdd)="onItemAdded($event)"-->
+                                       <!--[placeholder]="options.placeholder"-->
+                                       <!--[secondaryPlaceholder]="options.secondaryPlaceholder">-->
+                            <!--</tag-input>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<br/>-->
+                <!--</div>-->
+                <br/>
                 <div class="row">
                     <div class="col-md-12">
                         <button type="button" class="btn btn-success pull-right" (click)="search()">Search</button>
