--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-axioma-reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-axioma-reporting.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h4><small>login: user pass: Qwerty123</small></h4>
     <div class="row">
         <div class="col-md-12">
             <div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>
@@ -8,7 +9,7 @@
                     <param name='name' value='AXIOMA&#47;axioma_report' />
                     <param name='tabs' value='no' />
                     <param name='toolbar' value='no' />
-                    <param name='showShareOptions' value='true' />
+                    <param name='showShareOptions' value='false' />
                 </object>
             </div>
         </div>
