--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h4><small>login: user pass: Qwerty123</small></h4>
     <div class="row">
         <div class="col-md-12">
             <div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>
@@ -7,8 +8,8 @@
                     <param name='site_root' value='' />
                     <param name='name' value='MacroMonitor&#47;MacroMonitor' />
                     <param name='tabs' value='no' />
-                    <param name='toolbar' value='yes' />
-                    <param name='showShareOptions' value='true' />
+                    <param name='toolbar' value='no' />
+                    <param name='showShareOptions' value='false' />
                 </object>
             </div>
         </div>
