--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h4><small>login: user pass: Qwerty123</small></h4>
     <div class="row">
         <div class="col-md-12">
             <div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>
@@ -6,8 +7,9 @@
                     <param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />
                     <param name='site_root' value='' />
                     <param name='name' value='NIC_PORTFOLIO&#47;NICPortfolio' />
-                    <param name='tabs' value='no' /><param name='toolbar' value='yes' />
-                    <param name='showShareOptions' value='true' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='no' />
+                    <param name='showShareOptions' value='false' />
                 </object>
             </div>
         </div>
