--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -100,6 +100,23 @@
                     </li>
                     <li><a href="#">Real Estate</a></li>
                     <li><a href="#">Hedge Funds</a></li>
+                    <!--<li class="dropdown">-->
+                        <!--&lt;!&ndash;<a th:href="@{/pe}">Private Equity</a>&ndash;&gt;-->
+                        <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">-->
+                            <!--Hedge Funds <span class="bootstrapCaret"></span>-->
+                        <!--</a>-->
+                        <!--<ul class="dropdown-menu">-->
+                            <!--<li><a [routerLink]="['/hf/dashboard']" >Dashboard</a></li>-->
+                            <!--<li><a [routerLink]="['/hf/fundSearch']">Fund Search</a></li>-->
+                            <!--<li><a [routerLink]="['/hf/fundSelection']">Fund Selection </a></li>-->
+                            <!--<li><a [routerLink]="['/hf/portfolio']">Portfolio </a></li>-->
+                            <!--<li><a [routerLink]="['/hf/report']">Report </a></li>-->
+                            <!--<li role="separator" class="divider"></li>-->
+                            <!--<li><a [routerLink]="['/hf/fundProfile']">New Fund </a></li>-->
+                            <!--<li><a [routerLink]="['/hf/managerProfile']">New Manager </a></li>-->
+
+                        <!--</ul>-->
+                    <!--</li>-->
                     <li><a [routerLink]="['/bt/list']" data-toggle="tooltip" title="Business Trip Memo">Business Trips</a></li>
                 </ul>
             </div>
