--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="dropdown pull-right">
-                    <button class="btn btn-primary dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Create
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">New
                         <span class="bootstrapCaret"></span></button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
                         <li role="presentation">
